--- a/src/locales/de/de-translation.json
+++ b/src/locales/de/de-translation.json
@@ -79,7 +79,7 @@
     "hero": {
       "title": "Professionelle Lösungen in der digitalen Welt",
       "subtitle": "Mit unserem breiten Spektrum an Dienstleistungen vom Webdesign bis zur künstlichen Intelligenz lassen wir Ihr Unternehmen in der digitalen Welt herausstechen.",
-      "cta": "Entdecken Sie unsere Dienstleistungen",
+      "cta": "Entdecken Sie unsere Dienste",
       "ideaFromYou": "Ihre Idee,",
       "fromUs": "Unsere Umsetzung.",
       "flipWords": ["Web", "SEO", "Mobil", "Logo", "Marke", "Werbung"]
